; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_svcsock.c_svc_udp_get_dest_address4.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_svcsock.c_svc_udp_get_dest_address4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_rqst = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }
%struct.cmsghdr = type { i64 }
%struct.in_pktinfo = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@IP_PKTINFO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.svc_rqst*, %struct.cmsghdr*)* @svc_udp_get_dest_address4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @svc_udp_get_dest_address4(%struct.svc_rqst* %0, %struct.cmsghdr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.svc_rqst*, align 8
  %5 = alloca %struct.cmsghdr*, align 8
  %6 = alloca %struct.in_pktinfo*, align 8
  store %struct.svc_rqst* %0, %struct.svc_rqst** %4, align 8
  store %struct.cmsghdr* %1, %struct.cmsghdr** %5, align 8
  %7 = load %struct.cmsghdr*, %struct.cmsghdr** %5, align 8
  %8 = call %struct.in_pktinfo* @CMSG_DATA(%struct.cmsghdr* %7)
  store %struct.in_pktinfo* %8, %struct.in_pktinfo** %6, align 8
  %9 = load %struct.cmsghdr*, %struct.cmsghdr** %5, align 8
  %10 = getelementptr inbounds %struct.cmsghdr, %struct.cmsghdr* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @IP_PKTINFO, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %24

15:                                               ; preds = %2
  %16 = load %struct.in_pktinfo*, %struct.in_pktinfo** %6, align 8
  %17 = getelementptr inbounds %struct.in_pktinfo, %struct.in_pktinfo* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.svc_rqst*, %struct.svc_rqst** %4, align 8
  %21 = getelementptr inbounds %struct.svc_rqst, %struct.svc_rqst* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32 %19, i32* %23, align 4
  store i32 1, i32* %3, align 4
  br label %24

24:                                               ; preds = %15, %14
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local %struct.in_pktinfo* @CMSG_DATA(%struct.cmsghdr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
